# AutonomousDrone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ardupilot_param.param
DroneClient/: CMakeLists.txt  README.md  main.cpp
DroneClient/config/: drone2.ini
DroneClient/data/: 2022-06-06-14-18-57.csv  2022-06-06-14-21-09.csv  2022-06-06-14-22-28.csv  2022-06-06-14-23-54.csv  2022-06-06-14-25-20.csv  2022-06-06-14-30-52.csv  scatter_plot.ipynb
DroneClient/src/: DWM1001C.cpp  DWM1001C.h  Drone.cpp  Drone.h  INIReader.h  Mavlink.cpp  Mavlink_test_2.cpp  Serial.cpp  Serial.h  Socket.cpp  Socket.h  TCP_Socket.cpp  UART.h  UWB.cpp  config.h  drone.ini  dwm1001.mak  dwm1001_tlv.h  dwm_api.cpp  dwm_api.h  dwm_test.cpp  hal.c  hal.h  hal_gpio.h  hal_interface.h  hal_log.c  hal_log.h  hal_spi.h  hal_uart.h  lmh.c  lmh.h  lmh_spirx.c  lmh_spirx.h  main.cpp  main.cpp.orig  serial_port.cpp  serial_port.h  tag_cfg.c  test.cpp  testing_positioning.cpp
DroneServer/: CMakeLists.txt  main.cpp
DroneServer/src/: Socket.h  TCP_test.cpp  main.cpp
Hardware/: RasPiSupport_v1.STL  antennaSupport_v1.STL  pumpHolder_v3.STL  rasPiSupport_v3.STL  supportRight_v2.STL  support_left_v2.STL  tank_v7.STL
PCB/: BOM.csv  BOM.xlsx  CPL.csv  CPL.xlsx  P&P.csv  PCB_v5.DRR  PCB_v5.EXTREP  PCB_v5.GBS  PCB_v5.GP1  PCB_v5.GTS  PCB_v5.REP  PCB_v5.apr
PCB/Gerber/: PCB_v5.GBL  PCB_v5.GBO  PCB_v5.GM5  PCB_v5.GP2  PCB_v5.GTL  PCB_v5.GTO  PCB_v5.GTP
Positioning/: 2022-06-06-14-21-09_analysis.xlsx  scatter_plot.ipynb  scatter_plot.py
Positioning/Data/: 2022-06-06-14-18-57.csv  2022-06-06-14-21-09.csv  2022-06-06-14-22-28.csv  2022-06-06-14-27-26.csv  error_09_x.csv  error_09_y.csv  error_57_x.csv  error_57_y.csv
Room Mapping/devel/: .rosinstall
Room Mapping/devel/lib/kinect2_bridge/: kinect2_bridge
Room Mapping/devel/lib/pkgconfig/: kinect2_viewer.pc
Room Mapping/devel/lib/python2.7/dist-packages/rgbdslam/srv/: __init__.py  _rgbdslam_ros_ui_b.py  _rgbdslam_ros_ui_f.py
Room Mapping/devel/share/common-lisp/ros/rgbdslam/srv/: rgbdslam_ros_ui_f.lisp
Room Mapping/devel/share/gennodejs/ros/rgbdslam/srv/: rgbdslam_ros_ui_b.js  rgbdslam_ros_ui_f.js
Room Mapping/devel/share/roseus/ros/rgbdslam/srv/: rgbdslam_ros_ui_f.l
RoomMapping/: README.md
RoomMapping/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
RoomMapping/devel/include/rgbdslam/: rgbdslam_ros_ui.h  rgbdslam_ros_uiRequest.h  rgbdslam_ros_uiResponse.h  rgbdslam_ros_ui_b.h  rgbdslam_ros_ui_bRequest.h  rgbdslam_ros_ui_bResponse.h  rgbdslam_ros_ui_f.h  rgbdslam_ros_ui_fRequest.h  rgbdslam_ros_ui_fResponse.h  rgbdslam_ros_ui_s.h  rgbdslam_ros_ui_sRequest.h  rgbdslam_ros_ui_sResponse.h
RoomMapping/devel/lib/kinect2_calibration/: kinect2_calibration
RoomMapping/devel/lib/kinect2_viewer/: kinect2_viewer
RoomMapping/devel/lib/pkgconfig/: kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  rgbdslam.pc
RoomMapping/devel/lib/python2.7/dist-packages/rgbdslam/srv/: _rgbdslam_ros_ui.py  _rgbdslam_ros_ui_s.py
RoomMapping/devel/lib/rgbdslam/: rgbdslam
RoomMapping/devel/share/common-lisp/ros/rgbdslam/srv/: rgbdslam_ros_ui.lisp  rgbdslam_ros_ui_b.lisp
RoomMapping/devel/share/gennodejs/ros/rgbdslam/srv/: _index.js  rgbdslam_ros_ui.js  rgbdslam_ros_ui_s.js
RoomMapping/devel/share/roseus/ros/rgbdslam/: manifest.l
RoomMapping/devel/share/roseus/ros/rgbdslam/srv/: rgbdslam_ros_ui.l  rgbdslam_ros_ui_b.l  rgbdslam_ros_ui_s.l
